<resources>
    <string name="app_name">Randomizer</string>

    <!--    chose_list_dialog-->
    <string name="chose_list">Select a list</string>
    <string name="crete_list">Create a list</string>
    <string name="delete_list">Delete list?</string>
    <string name="can_not_undo">This action cannot be undone</string>

    <!--    chose_dice_dialog-->
    <string name="number_of_dice">Number of dice (1 – 50)</string>

    <!--    create_list_dialog-->
    <string name="list_title">List title</string>
    <string name="item">Item</string>
    <string name="add">ADD</string>

    <!--    create_matches_dialog-->
    <string name="number_of_matches">Number of matches(1 – 500)</string>
    <string name="number_of_burned">Number of burned(1 – 500)</string>

    <!--    create_number_dialog-->
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="number_of_results">Number of results(1 – 1000)</string>
    <string name="generate">GENERATE</string>

    <!--    dialog_color_picker-->
    <string name="night_mode">Night mode</string>
    <string name="chose_theme">Chose theme</string>

    <!--    fragment_coin-->
    <string name="coin">Coin</string>

    <!--    fragment_dice-->
    <string name="dice">Dice</string>
    <string name="total">Total:</string>

    <!--    fragment_list-->
    <string name="list">List</string>

    <!--    fragment_matches-->
    <string name="matches">Matches</string>

    <!--    fragment_number-->
    <string name="number">Number</string>

    <!--    fragment_random_list-->
    <string name="coin_u">COIN</string>
    <string name="dice_u">DICE</string>
    <string name="list_u">LIST</string>
    <string name="matches_u">MATCHES</string>
    <string name="number_u">NUMBER</string>

    <!--    input_filters-->
    <string name="dice_value">Value must be between 1 and 50</string>
    <string name="number_max_min">Incorrect value</string>
    <string name="number_min_bigger_then_max">Min value cannot be more then max</string>
    <string name="number_results_too_large">Value cannot be less than 1 or more than 1000</string>
    <string name="matches_empty">This field cannot be empty or less than 1</string>
    <string name="number_of_burned_invalid">This field cannot be empty or less than 0</string>
    <string name="number_of_matches_too_large">Value cannot be bigger than 500</string>
    <string name="number_of_burned_too_large">Value cannot be bigger than number of matches</string>
    <string name="dialog_title_empty">Title cannot be empty</string>
    <string name="item_empty">Item cannot be empty</string>


    <string name="fon">fon</string>
    <string name="create">CREATE</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save changes?</string>
    <string name="no">No</string>

    <!--  excuses-->
    <string name="excuses">Excuses</string>
    <string name="excuses_1">My neighbor called - the water pipes "broke" and basement is flooding. Got to get home ASAP, sorry!</string>
    <string name="excuses_2">There are cops around, i’ll call you later</string>
    <string name="excuses_3">Leonardo DiCaprio called me to netflix and chill last night</string>
    <string name="excuses_4">My cat needed some love and i couldn’t leave him</string>
    <string name="excuses_5">Sorry for missing the call my calendar has timezone issues</string>
    <string name="excuses_6">The dog ate my notebook. Really! It`s no funny!</string>
    <string name="excuses_7">My spiritual animal is a bear, so it’s hard for me to be awaken this cold winter days</string>
    <string name="excuses_8">I moved to another house yesterday. had no time to inform you</string>
    <string name="excuses_9">I was there the entire time, you just didn’t notice me</string>
    <string name="excuses_10">It’s always hard for me to write first and i was waiting for your letter</string>
    <string name="excuses_11">I woke up and somehow thought today was Sunday</string>
    <string name="excuses_12">My trousers split on a way to work</string>
    <string name="excuses_13">I moved to another house yesterday. had no time to inform you</string>
    <string name="excuses_14">I’ve locked my keys in car. The locksmith’s on the way, but he said it might be hours before he arrives</string>
    <string name="excuses_15">We ran out of toilet paper at my house last night, and my Dad isn’t feeling so good. He grabbed it in a big rush and I haven’t seen it since</string>
</resources>